--- a/index.html
+++ b/index.html
@@ -177,25 +177,25 @@
                     <img src="img/Logo.png" alt="">
                 </div>
                 <div class="info-item">
-                    <p class="f18">Company</p>
+                    <p class="f18"><b>Company</b></p>
                     <p class="f16">About</p>
                     <p class="f16">Careers</p>
                     <p class="f16">Press</p>
                 </div>
                 <div class="info-item">
-                    <p class="f18">Community</p>
+                    <p class="f18"><b>Community</b></p>
                     <p class="f16">About</p>
                     <p class="f16">Careers</p>
                     <p class="f16">Press</p>
                     <p class="f16">Press</p>
                 </div>
                 <div class="info-item">
-                    <p class="f18">Teaching</p>
+                    <p class="f18"><b>Teaching</b></p>
                     <p class="f16">About</p>
                     <p class="f16">Careers</p>
                 </div>
                 <div class="info-item">
-                    <p class="f18">Be social</p>
+                    <p class="f18"><b>Be social</b></p>
                     <p class="f16"><img src="img/fb.png" alt=""> Facebook</p>
                     <p class="f16"><img src="img/in.png" alt="">Linked in</p>
                     <p class="f16"><img src="img/ins.png" alt="">Instagram</p>
