--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <p class="f16"><img src="img/fb.png" alt=""> Facebook</p>
                     <p class="f16"><img src="img/in.png" alt="">Linked in</p>
                     <p class="f16"><img src="img/ins.png" alt="">Instagram</p>
-                    <p class="f16"><img src="img/tw.png" alt="">Tweets</p>
+                    <p class="f16"><img src="img/tw.png" alt="">Twitter</p>
                     
                 </div>
             </div>
